@@ -912,6 +912,32 @@ sub render_full
 ######################################################################
 =pod
 
+=item $url = $dataobj->uri
+
+Returns a unique URI for this object. Not certain to resolve as a 
+URL.
+
+If $c->{dataobj_uri}->{eprint} is a function, call that to work it out.
+
+=cut
+######################################################################
+
+sub uri
+{
+	my( $self ) = @_;
+
+	my $ds_id = $self->get_dataset->confid;
+	if( $self->get_session->get_repository->can_call( "dataobj_uri", $ds_id ) )
+	{
+		return $self->get_session->get_repository->call( [ "dataobj_uri", $ds_id ], $self );
+	}
+			
+	return $self->get_session->get_repository->get_conf( "base_url" )."/id/".$ds_id."/".$self->get_id;
+}
+
+######################################################################
+=pod
+
 =item $url = $dataobj->get_url
 
 Returns the URL for this record, for example the URL of the abstract page
@@ -1003,7 +1029,10 @@ sub to_xml
 
 	$attrs{'xmlns'}=$ns unless( $opts{no_xmlns} );
 	my $tl = "record";
-	if( $opts{version} == 2 ) { $tl = $self->{dataset}->confid; }	
+	if( $opts{version} == 2 ) { 
+		$tl = $self->{dataset}->confid; 
+		$attrs{'id'} = $self->uri;
+	}	
 	my $r = $self->{session}->make_element( $tl, %attrs );
 	$r->appendChild( $self->{session}->make_text( "\n" ) );
 #$r->appendChild( $self->{session}->make_text( "x\nx" ) );
